# maori-language-game-jam-2022

./: .gitignore  CREDITS.md  Cargo.toml  README.md  index.html  wasm-launcher-5af61b03dd56e761.js  wasm-launcher-5b62cc23cd0efb29.js  wasm-launcher-809ae27f0370a951.js  wasm-launcher-85aa82b7f6442c26.js  wasm-launcher-d57b775b2fe7f599.js
.github/: FUNDING.yml
.github/workflows/: build.yml  release-gh-pages.yml  release-native.yml
assets/graphics/sprites/: bug_sprite_001.aseprite  kiwi_sprite_001.aseprite
assets/levels/: levels.ldtk
launchers/native/: Cargo.toml
launchers/native/src/: main.rs
launchers/wasm/: Cargo.toml  index.html
launchers/wasm/src/: main.rs
src/: assets.rs  bug.rs  helpers.rs  intro.rs  kiwi.rs  level.rs  lib.rs  music.rs  paused.rs  render.rs  statemanagement.rs
