[package]
name = "tane-game"
version = "0.1.2"
edition = "2021"

[workspace]
members = [
    "launchers/wasm",
    "launchers/native",
]

[[bin]]
name="native-launcher"
path="launchers/native/src/main.rs"

# Optimizations for WASM
[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true

[dependencies]
bevy = "0.8.1"
bevy_asset_loader = { version = "0.12.1", features = ["stageless"] }
bevy_egui = "0.15.1"
bevy-inspector-egui = "0.12.1"
bevy_kira_audio = { version = "0.12.0", default-features = false, features = ["ogg"] }
image = "0.24.3"
iyes_loopless = {  version = "0.7.1", features = ["states"] }
leafwing-input-manager = "0.5.2"
winit = "0.26.1"
