[package]
name = "tane-game"
version = "0.1.3"
edition = "2021"

[workspace]
members = [
    "launchers/wasm",
    "launchers/native",
]

[[bin]]
name="tane-game-launcher"
path="launchers/native/src/main.rs"

# Optimizations for WASM
[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true

[dependencies]
bevy = "0.8.1"
bevy-inspector-egui = "0.12.1"
bevy_asset_loader = { version = "0.12.1", features = ["stageless"] }
bevy_ecs_ldtk = "0.4.0"
bevy_egui = "0.15.1"
bevy_flycam = "0.8.1"
bevy_kira_audio = { version = "0.12.0", default-features = false, features = ["ogg"] }
heron = { version = "4.0.0", features = ["collision-from-mesh", "2d", "debug-2d"] }
image = "0.24.3"
iyes_loopless = {  version = "0.7.1", features = ["states"] }
leafwing-input-manager = "0.5.2"
rand = "0.8.5"
winit = "0.26.1"
